--- a/config_sample.env
+++ b/config_sample.env
@@ -1,32 +1,42 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+OWNER_ID = "5422016608"
+TELEGRAM_API = "27476108"
+TELEGRAM_HASH = "ed25a3c999b0849364a83b11bea390a0"
+BOT_TOKEN = "7299711404:AAFR8ldCDX-HocA4sgjlydJy7l1A5IGiib4"
+
+# Update
+UPSTREAM_REPO = "https://github.com/raj141414/AnastyMLTB"
+UPSTREAM_BRANCH = "master"
+
 # OPTIONAL CONFIG
-USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
-DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
-STATUS_LIMIT = "10"
+USER_SESSION_STRING = ""
+DATABASE_URL = "mongodb+srv://Babu:RARA12@cluster0.cbischq.mongodb.net/?retryWrites=true&w=majority"
+DOWNLOAD_DIR = "/usr/src/app/downloads/"
+CMD_SUFFIX = ""  
+AUTHORIZED_CHATS = ""   
+SUDO_USERS = ""  
+STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
+AUTO_DELETE_MESSAGE_DURATION = "60"
+EXTENSION_FILTER = "index html"
+INCOMPLETE_TASK_NOTIFIER = "True"
+YT_DLP_OPTIONS = ""
+
+# Site Api
 FILELION_API = ""
 STREAMWISH_API = ""
-EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = "False"
-YT_DLP_OPTIONS = ""
-USE_SERVICE_ACCOUNTS = "False"
-NAME_SUBSTITUTE = ""
-# GDrive Tools
-GDRIVE_ID = ""
+JIODRIVE_ACCESS_TOKEN = ""
+
+# GDrirve Tools
+GDRIVE_ID = "1j83pj6sIL2mfNiWFqOYbb21vvNvlTwqd"
 IS_TEAM_DRIVE = "False"
-STOP_DUPLICATE = "False"
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "False"
+STOP_DUPLICATE = "True"
+INDEX_URL = "https://blastergadu.blasteranna1414.workers.dev/0:"
+
 # Rclone
 RCLONE_PATH = ""
 RCLONE_FLAGS = ""
@@ -34,35 +44,67 @@ RCLONE_SERVE_URL = ""
 RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
-# JDownloader
-JD_EMAIL = ""
-JD_PASS = ""
-# Sabnzbd
-USENET_SERVERS = [{'name': 'main', 'host': '', 'port': 5126, 'timeout': 60, 'username': '', 'password': '', 'connections': 8, 'ssl': 1, 'ssl_verify': 2, 'ssl_ciphers': '', 'enable': 1, 'required': 0, 'optional': 0, 'retention': 0, 'send_group': 0, 'priority': 0}]
-# Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
-USER_TRANSMISSION = "False"
-MIXED_LEECH = "False"
 LEECH_FILENAME_PREFIX = ""
-LEECH_DUMP_CHAT = ""
+LEECH_REMOVE_UNWANTED = ""
+DUMP_CHAT_ID = "-1002099811735"
+USER_DUMP = ""
+
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "300"
 BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
+
 #Queueing system
 QUEUE_ALL = ""
 QUEUE_DOWNLOAD = ""
 QUEUE_UPLOAD = ""
+
 # RSS
-RSS_DELAY = "900"
-RSS_CHAT = ""
+RSS_DELAY = "600"
+RSS_CHAT_ID = ""
+
+# Mega
+MEGA_EMAIL = ""
+MEGA_PASSWORD = ""
+
+#Limits
+STORAGE_THRESHOLD = "1"
+TORRENT_LIMIT = ""
+DIRECT_LIMIT = ""
+YTDLP_LIMIT = ""
+PLAYLIST_LIMIT = ""
+GDRIVE_LIMIT = ""
+MEGA_LIMIT = "5"
+LEECH_LIMIT = ""
+CLONE_LIMIT = ""
+RCLONE_LIMIT = ""
+
+#Group Features
+FSUB_IDS = ""
+USER_MAX_TASKS = ""
+REQUEST_LIMITS = "5"
+ENABLE_MESSAGE_FILTER = "False"
+STOP_DUPLICATE_TASKS = "True"
+DISABLE_DRIVE_LINK = "True"
+TOKEN_TIMEOUT = ""
+
+#Extras
+SET_COMMANDS = "True"
+DISABLE_LEECH = "False"
+DISABLE_BULK = "False"
+DISABLE_MULTI = "False"
+DISABLE_SEED = "False"
+DM_MODE = "all"
+DELETE_LINKS = "True"
+LOG_CHAT_ID = ""
+
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = "0"
